--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <div class="box3">
             <h1>Box 3</h1>
         </div>
+        <div class="box4">
+            <h1>Box 4</h1>
+        </div>
+        <div class="box5">
+            <h1>Box 5</h1>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
